<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/itempet">

    <ImageView
        android:id="@+id/ivPhotoPet"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/tvPetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/petname"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhotoPet" />

    <TextView
        android:id="@+id/tvPetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/petdate"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/ivPhotoPet"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPetDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/petdir"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPhotoPet"
        app:layout_constraintTop_toBottomOf="@+id/tvPetDate" />

    <TextView
        android:id="@+id/tvPetPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/petphone"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPhotoPet"
        app:layout_constraintTop_toBottomOf="@+id/tvPetDir" />

    <TextView
        android:id="@+id/tvPetDescription"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="12dp"
        android:text="@string/petdescription"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPetPhone" />

    <TextView
        android:id="@+id/tvPetType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/petype"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPetDate"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>